# FusionC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/codegen/: machine_codegen.cpp  machine_codegen.h
core/: compiler_controller.cpp  compiler_controller.h  language_loader.cpp  language_loader.h
frontend/lexer/: token.cpp  token.h
frontend/parser/: ast.cpp  ast.h
frontend/semantic/: symbol_table.cpp  symbol_table.h
fusionc_cli/: cli_parser.cpp  cli_parser.h
languages/: language_interface.h
middleend/ir/: ir.h  three_address_code.cpp
middleend/optimizer/: optimizer.cpp  optimizer.h
tests/test_c/: for.c  printf.c  sample.c  scanf.c  while.c
tests/test_custom/: print.fsc  print_var.fsc  sample.fsc
